# clear-all-to-win-server

./: Cargo.toml  Dockerfile  README.md
migrations/2020-06-30-162358_create_gamerecords/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/api/: v1.rs
src/api/v1/: db_entity_converters.rs  gamerecords.rs
