[package]
name = "clear-all-to-win-server"
version = "0.1.0"
authors = ["wcaokaze <wcaokaze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["postgres"] }
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
